// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryQueries should get category from node interface 1`] = `
Object {
  "category": Object {
    "id": "FROZEN-ID",
    "name": "category 0",
  },
}
`;

exports[`CategoryQueries should query a connection of categories 1`] = `
Object {
  "categories": Object {
    "count": 6,
    "edges": Array [
      Object {
        "node": Object {
          "id": "FROZEN-ID",
          "name": "category 6",
        },
      },
      Object {
        "node": Object {
          "id": "FROZEN-ID",
          "name": "category 5",
        },
      },
      Object {
        "node": Object {
          "id": "FROZEN-ID",
          "name": "category 4",
        },
      },
      Object {
        "node": Object {
          "id": "FROZEN-ID",
          "name": "category 3",
        },
      },
      Object {
        "node": Object {
          "id": "FROZEN-ID",
          "name": "category 2",
        },
      },
    ],
  },
}
`;

exports[`CategoryQueries should query a connection of categories with orderBy filter 1`] = `
Object {
  "categories": Object {
    "count": 3,
    "edges": Array [
      Object {
        "node": Object {
          "id": "FROZEN-ID",
          "key": "category_1",
        },
      },
      Object {
        "node": Object {
          "id": "FROZEN-ID",
          "key": "category_2",
        },
      },
      Object {
        "node": Object {
          "id": "FROZEN-ID",
          "key": "category_3",
        },
      },
    ],
  },
}
`;
